feat(http-proxy): http proxy starter